--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,8 @@
 	path = OCA/sale-workflow
 	url = git@github.com:OCA/sale-workflow.git
 	branch = 12.0
+
+[submodule "thomaspot/account_sepa_direct_debit_additional_app"]
+	path = thomaspot/account_sepa_direct_debit_additional_app
+	url = git@github.com:thomaspot/account_sepa_direct_debit_additional_app.git
+	branch = 12.0
