--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,8 @@
 	path = OCA/knowledge
 	url = git@github.com:OCA/knowledge.git
 	branch = 12.0
+
+[submodule "open2bizz/odoo_crm"]
+	path = open2bizz/odoo_crm
+	url = git@github.com:open2bizz/odoo_crm.git
+	branch = 12.0
