--- a/.gitmodules
+++ b/.gitmodules
@@ -47,3 +47,8 @@
 	path = odoo-addons
 	url = https://github.com/open2bizz/odoo-addons.git
 	branch = 12.0
+
+[submodule "thomaspot/odoo-o2b"]
+	path = thomaspot/odoo-o2b
+	url = git@github.com:thomaspot/odoo-o2b.git
+	branch = master
