--- a/.gitmodules
+++ b/.gitmodules
@@ -63,3 +63,8 @@
 	url = git@github.com:OCA/social.git
 	branch = 12.0
 	
+
+[submodule "open2bizz/odoo-addons"]
+	path = open2bizz/odoo-addons
+	url = git@github.com:open2bizz/odoo-addons.git
+	branch = 12.0
