--- a/.gitmodules
+++ b/.gitmodules
@@ -38,11 +38,6 @@
 	url = git@github.com:OCA/knowledge.git
 	branch = 12.0
 
-[submodule "open2bizz/odoo_crm"]
-	path = open2bizz/odoo_crm
-	url = git@github.com:open2bizz/odoo_crm.git
-	branch = 12.0
-
 [submodule "thomaspot/odoo-o2b"]
 	path = thomaspot/odoo-o2b
 	url = git@github.com:thomaspot/odoo-o2b.git
@@ -59,7 +54,11 @@
 	branch = 12.0
 	
 
-[submodule "open2bizz/odoo-addons"]
-	path = open2bizz/odoo-addons
-	url = git@github.com:open2bizz/odoo-addons.git
+[submodule "odoo-addons"]
+	path = odoo-addons
+	url = https://github.com/open2bizz/odoo-addons.git
+	branch = 12.0
+[submodule "odoo-crm"]
+	path = odoo-crm
+	url = https://github.com/open2bizz/odoo_crm.git
 	branch = 12.0
