--- a/.gitmodules
+++ b/.gitmodules
@@ -62,3 +62,8 @@
 	path = odoo-crm
 	url = https://github.com/open2bizz/odoo_crm.git
 	branch = 12.0
+
+[submodule "connector-telephony"]
+	path = connector-telephony
+	url = git@github.com:OCA/connector-telephony.git
+	branch = 12.0
