[ADD] submodule connector-telephony

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,8 @@
 	path = thomaspot/knowledge
 	url = git@github.com:thomaspot/knowledge.git
 	branch = 14.0_migrate
+
+[submodule "connector-telephony"]
+	path = connector-telephony
+	url = git@github.com:akretion/connector-telephony.git
+	branch = 14-mig-asterisk_click2dial
